--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
       </div>
 
       <p>
-        <a href="#none"></a> 비밀번호를 잊으셨나요?
+        <a href="#none">비밀번호를 잊으셨나요?</a> 
       </p>
     
     </div>
